@@ -340,7 +340,8 @@
    <copyField source="title" dest="text"/>
    <copyField source="subject" dest="text"/>
  
-
+   <copyField source="*_t" dest="text"/>
+   
  <!-- Similarity is the scoring routine for each document vs a query.
       A custom similarity may be specified here, but the default is fine
       for most applications.
