@@ -15,6 +15,8 @@ New Features
  8. Support for customizing the QueryResponseWriter per request
     (Mike Baranczak / SOLR-16 / hossman)
  9. Added KeywordTokenizerFactory (hossman)
+10. copyField accepts dynamicfield-like names as the source.
+    (Darren Erik Vengroff via yonik, SOLR-21)
      
 Changes in runtime behavior
  1. classes reorganized into different packages, package names changed to Apache
